--- a/app/views/layouts/_cover.html.erb
+++ b/app/views/layouts/_cover.html.erb
@@ -22,7 +22,7 @@
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+              <p>Students Present for <a href="http://getbootstrap.com">Flatiron School</a>, by <a href="https://twitter.com/mdo">Sofia Ma and Elizabeth Wolensky</a>.</p>
             </div>
           </div>
 
