--- a/app/views/advices/index.html.erb
+++ b/app/views/advices/index.html.erb
@@ -14,7 +14,7 @@
   <% @advices.each do |advice| %>
     <div class="col-md-5">
       <div class="thumbnail" >
-        <div class="caption">
+        <div class="caption long-text">
           <h3><%= advice.create_url_title(advice.url) %></h3>
           <p class='url'><%=link_to advice.url, advice.url %></p>
           <div class='tags'>
