--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
       </div>
       <div class='col-md-8 col-md-offset-2 user-advice' data-advice-id='<%= advice.id %>' data-user-advice-id='<%= user_advice.id %>'>
         <div class="thumbnail" >
-          <div class="caption">
+          <div class="caption long-text">
             <h3><%= advice.create_url_title(advice.url) %></h3>
             <p class='url'><%=link_to advice.url, advice.url %></p>
             <div class='tags'>
