--- a/app/views/advices/index.html.erb
+++ b/app/views/advices/index.html.erb
@@ -13,7 +13,7 @@
   <div class='col-md-10 col-md-offset-1'>
   <% @advices.each do |advice| %>
     <div class="col-md-5">
-      <div class="thumbnail" >
+      <div class="thumbnail" style="height: 250px">
         <div class="caption long-text">
           <h3><%= advice.create_url_title(advice.url) %></h3>
           <p class='url'><%=link_to advice.url, advice.url %></p>
