final(it) styling for presentation

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,10 +11,10 @@
  * file per style scope.
  *
  *= require_self
+ *= require bootstrap
  *= require cover
  *= require starter-template
  *= require custom
 
  */
 
-@import 'bootstrap'
