--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div>
-    <h2><%= link_to 'Add Advice', new_advice_path %><h2>
+     <h2><%= link_to '', new_advice_path %><h2>
     <%= render 'advices/form' %>
   </div>
 </div>
