Add button added

--- a/app/views/advices/index.html.erb
+++ b/app/views/advices/index.html.erb
@@ -16,6 +16,18 @@
           <div class='ratio'>
            <h4><%= advice.ratio(advice.id) %></h4>
          </div>
+         <div >
+          <%= simple_form_for @advice, :html => {:role => 'form'} do |f| %>
+            <%= f.error_notification %>
+            <div class='form-group'>
+              <%= f.hidden_field :url, :value => "#{advice.url}" %>
+            </div>
+            <div class='form-group'>
+              <%= f.hidden_field :user_id, :value => "#{current_user.id}" %>
+            </div>
+            <%= f.submit 'Add!', :class => 'btn btn-default' %>
+          <% end %>
+         </div>
         </div>
       </div>
     </div>
