add button darkened

--- a/app/views/advices/index.html.erb
+++ b/app/views/advices/index.html.erb
@@ -25,7 +25,7 @@
             <div class='form-group'>
               <%= f.hidden_field :user_id, :value => "#{current_user.id}" %>
             </div>
-            <%= f.submit 'Add!', :class => 'btn btn-default' %>
+            <%= f.submit 'Add!', :class => 'btn btn-default add' %>
           <% end %>
          </div>
         </div>
