--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,3 +33,10 @@ input, button, select, textarea {
 .long-text{
   word-wrap: break-word;
 }
+
+.add{
+ font-weight: bold;
+ border-style: solid;
+ border-width: 1px;
+ border-color: #D9D9D9 ;
+}
