--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Remedy</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -9,6 +10,9 @@
 </head>
 
 <body>
+  <%= render 'layouts/header' %>
+  
   <%= yield %>
 </body>
+
 </html>
