sidepanel added to page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,8 +13,7 @@
  *= require_self
  *= require bootstrap
  *= require cover
- *= require starter-template
+ *= require simple-siderbar
  *= require custom
-
  */
 
