--- a/app/views/advices/_form.html.erb
+++ b/app/views/advices/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="red-container">
+<div class="col-md-6">
   <%= simple_form_for @advice, :html => {:role => 'form'} do |f| %>
     <%= f.error_notification %>
     <div class='form-group'>
@@ -11,4 +11,4 @@
     </div>
     <%= f.submit :class => 'btn btn-default' %>
   <% end %>
-</div>  
+</div>
