--- a/app/views/advices/index.html.erb
+++ b/app/views/advices/index.html.erb
@@ -1,12 +1,10 @@
-
-
 <div class ='row'>
   <div class='col-md-1'>
   </div>
   <div class='col-md-10 col-md-offset-1'>
   <% @advices.each do |advice| %>
     <div class="col-md-5">
-      <div class="thumbnail" style="height: 300px">
+      <div class="thumbnail">
         <div class="caption long-text">
           <h3><%= advice.create_url_title(advice.url) %></h3>
           <p class='url'><%=link_to advice.url, advice.url %></p>
