small login issue fixed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       </div>
     </div>
     
-    <div class="container">
+    <div id="page-content-wrapper">
       <%= yield %>
     </div>
 
