--- a/app/views/advices/_form.html.erb
+++ b/app/views/advices/_form.html.erb
@@ -1,14 +1,16 @@
-<div class="col-md-6">
-  <%= simple_form_for @advice, :html => {:role => 'form'} do |f| %>
-    <%= f.error_notification %>
-    <div class='form-group'>
-      <%= f.label :url, 'url:' %>
-      <%= f.text_field :url, :autofocus => true, :placeholder => 'enter url', input_html: { "data-tooltip" => true, :class => "has-tip", :title => "Bla bla bla" } %>
-    </div>
-    <div class='form-group'>
-      <%= f.label :tag_list, "tags:" %>
-      <%= f.text_field :tag_list, :placeholder => 'separated by commas' %>
-    </div>
-    <%= f.submit :class => 'btn btn-default' %>
-  <% end %>
-</div>
+<% if current_user %>
+  <div class="col-md-6">
+    <%= simple_form_for @advice, :html => {:role => 'form'} do |f| %>
+      <%= f.error_notification %>
+      <div class='form-group'>
+        <%= f.label :url, 'url:' %>
+        <%= f.text_field :url, :autofocus => true, :placeholder => 'enter url', input_html: { "data-tooltip" => true, :class => "has-tip", :title => "Bla bla bla" } %>
+      </div>
+      <div class='form-group'>
+        <%= f.label :tag_list, "tags:" %>
+        <%= f.text_field :tag_list, :placeholder => 'separated by commas' %>
+      </div>
+      <%= f.submit :class => 'btn btn-default' %>
+    <% end %>
+  </div>
+<% end %>
