--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,14 +5,16 @@
         <div class="thumbnail" >
           <div class="caption long-text">
 
-            <h3><%= advice.create_url_title(advice.url) %></h3>
+            <h3><%= advice.title %></h3>
             <p class='url'><%=link_to advice.url, advice.url %></p>
             <div class='tags'>
-              <p>Tags: <%= raw advice.tag_list.map { |t| link_to t,  "/advices?tag=#{t}" }.join(', ') %>
-              </p>
+              
             </div>
-
-          </div>    
+          </div>  
+        <div class="btn-group" role="group" aria-label="...">
+          <button type="button" class="btn btn-default">It worked!</button>
+          <button type="button" class="btn btn-default">Not so much.</button>
+        </div>    
         </div>  
       </div>  
     <% end %>
