--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <link href='http://fonts.googleapis.com/css?family=Lemon' rel='stylesheet' type='text/css'>
+  <%= javascript_tag "window.secret_token = '#{form_authenticity_token}'" %>
 </head>
 
 <body>
