--- a/app/views/advices/index.html.erb
+++ b/app/views/advices/index.html.erb
@@ -5,36 +5,8 @@
   <div class='col-md-1'>
   </div>
   <div class='col-md-10 col-md-offset-1'>
-  <% @advices.each do |advice| %>
-
-    <div class="col-md-5">
-      <div class="thumbnail">
-        <div class="caption long-text">
-
-          <p class='url'><%=link_to advice.url, advice.url %></p>
-          <div class='tags'>
-            <p>Tags: <%= raw advice.tag_list.map { |t| link_to t,  "/advices?tag=#{t}" }.join(', ') %>
-            </p>
-          </div>
-          <div class='ratio'>
-           <h4><%= advice.ratio(advice.id) %></h4>
-         </div>
-         <div >
-          <%= simple_form_for @advice, :html => {:role => 'form'} do |f| %>
-            <%= f.error_notification %>
-            <div class='form-group'>
-              <%= f.hidden_field :url, :value => "#{advice.url}" %>
-            </div>
-            <div class='form-group'>
-              <%= f.hidden_field :user_id, :value => "#{current_user.id}" %>
-            </div>
-            <%= f.submit 'Add!', :class => 'btn btn-default add' %>
-          <% end %>
-         </div>
-        </div>
-      </div>
-    </div>
-
-  <%end%> 
+    <% @advices.each do |advice| %>
+      <%= render partial: 'advices/advice', :locals => {:advice => advice} %>
+    <%end%> 
   </div>
 </div>
