--- a/app/views/advices/_advice.html.erb
+++ b/app/views/advices/_advice.html.erb
@@ -11,17 +11,30 @@
       </div> 
 
       <% if UserAdvice.find_by(user_id: current_user.id, advice_id: advice.id) %>
-      <p style="color:black">Current Vote: <%= UserAdvice.find_by(user_id: current_user.id, advice_id: advice.id).vote %></p>
+        <p style="color:black">Current Vote: <%= UserAdvice.find_by(user_id: current_user.id, advice_id: advice.id).vote %></p>
+        <div class="btn-group" role="group" id="advice_<%=advice.id%>">
+          <%= form_tag("/advices/#{advice.id}/vote") do %>
+            <div class="btn-group" role="group">
+              <%= submit_tag "UP", :class => "btn btn-default up-btn" %>
+              <%= submit_tag "DOWN", :class => "btn btn-default down-btn" %>
+            </div>
+          <% end %>
+        </div>
+      <% else %>
+        <%= simple_form_for @advice, :html => {:role => 'form'} do |f| %>
+          <%= f.error_notification %>
+          <div class='form-group'>
+            <%= f.hidden_field :url, :value => "#{advice.url}" %>
+          </div>
+          <div class='form-group'>
+            <%= f.hidden_field :user_id, :value => "#{current_user.id}" %>
+          </div>
+          <%= f.submit 'Add!', :class => 'btn btn-default add' %>
+        <% end %>
       <% end %>
 
-      <div class="btn-group" role="group" id="advice_<%=advice.id%>">
-        <%= form_tag("/advices/#{advice.id}/vote") do %>
-          <div class="btn-group" role="group">
-            <%= submit_tag "UP", :class => "btn btn-default up-btn" %>
-            <%= submit_tag "DOWN", :class => "btn btn-default down-btn" %>
-          </div>
-        <% end %>
-      </div>
 
+
+      
     </div>  
 </div>
