api keys yaml added

--- a/app/views/advices/_advice.html.erb
+++ b/app/views/advices/_advice.html.erb
@@ -36,7 +36,7 @@
 
     <% end %>
     <div style="color:black">
-      <%= advice.num_saved %>
+      <%= advice.num_saved %><%=advice.ratio%>
     </div>
       
   </div>  
